--- a/portfolio.html
+++ b/portfolio.html
@@ -130,16 +130,16 @@
                 <div class="over">
                   <picture>
                     <source
-                      srcset="./img/img1-mob-1x.jpg 1x, ./img/img1-mob-2x.jpg 2x"
-                      media="(max-with: 768px)"
+                      srcset="./img/img1-dt-1x.jpg 1x, ./img/img1-dt-2x.jpg 2x"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="./img/img1-tab-1x.jpg 1x, ./img/img1-tab-2x.jpg 2x"
-                      media="(min-with: 768px)"
+                      media="(min-width: 768px)"
                     />
                     <source
-                      srcset="./img/img1-dt-1x.jpg 1x, ./img/img1-dt-2x.jpg 2x"
-                      media="(min-with: 1200px)"
+                      srcset="./img/img1-mob-1x.jpg 1x, ./img/img1-mob-2x.jpg 2x"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/img1.jpg" alt="Технокряк" />
                   </picture>
@@ -164,16 +164,16 @@
                 <div class="over">
                   <picture>
                     <source
-                      srcset="./img/img2-mob-1x.jpg 1x, ./img/img2-mob-2x.jpg 2x"
-                      media="(max-with: 768px)"
+                      srcset="./img/img2-dt-1x.jpg 1x, ./img/img2-dt-2x.jpg 2x"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="./img/img2-tab-1x.jpg 1x, ./img/img2-tab-2x.jpg2x"
-                      media="(min-with: 768px)"
+                      media="(min-width: 768px)"
                     />
                     <source
-                      srcset="./img/img2-dt-1x.jpg 1x, ./img/img2-dt-2x.jpg 2x"
-                      media="(min-with: 1200px)"
+                      srcset="./img/img2-mob-1x.jpg 1x, ./img/img2-mob-2x.jpg 2x"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
                   </picture>
@@ -197,17 +197,16 @@
                 <div class="over">
                   <picture>
                     <source
-                      srcset="./img/img3-mob-1x.jpg 1x, ./img/img3-mob-2x.jpg 2x"
-                      media="(max-with: 768px)"
-                    />
-                    <source
-                      srcset="./img/img3-tab-1x.jpg 1x, 
-                    ./img/img3-tab-1x.jpg 2x 2x"
-                      media="(min-with: 768px)"
-                    />
-                    <source
                       srcset="./img/img3-dt-1x.jpg 1x, ./img/img3-dt-2x.jpg 2x"
-                      media="(min-with: 1200px)"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img3-tab-1x.jpg 1x, ./img/img3-tab-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./img/img3-mob-1x.jpg 1x, ./img/img3-mob-2x.jpg 2x"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/img3.jpg" alt="Ресторан Seafood" width="370" />
                   </picture>
@@ -231,16 +230,16 @@
                 <div class="over">
                   <picture>
                     <source
-                      srcset="./img/img4-mob-1x.jpg 1x, ./img/img4-mob-2x.jpg 2x"
-                      media="(max-with: 768px)"
+                      srcset="./img/img4-dt-1x.jpg 1x, ./img/img4-dt-2x.jpg 2x"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="./img/img4-tab-1x.jpg 1x, ./img/img4-tab-2x.jpg 2x"
-                      media="(min-with: 768px)"
+                      media="(min-width: 768px)"
                     />
                     <source
-                      srcset="./img/img4-dt-1x.jpg 1x, ./img/img4-dt-1x.jpg 2x"
-                      media="(min-with: 1200px)"
+                      srcset="./img/img4-mob-1x.jpg 1x, ./img/img4-mob-2x.jpg 2x"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/img4.jpg" alt="Проект Prime" width="370" />
                   </picture>
@@ -264,16 +263,16 @@
                 <div class="over">
                   <picture>
                     <source
-                      srcset="/img/img5-mob-1x.jpg 1x, /img/img5-mob-2x.jpg 2x"
-                      media="(max-with: 768px)"
+                      srcset="./img/img5-dt-1x.jpg 1x, ./img/img5-dt-2x.jpg 2x"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="./img/img5-tab-1x.jpg 1x, ./img/img5-tab-2x.jpg 2x"
-                      media="(min-with: 768px)"
+                      media="(min-width: 768px)"
                     />
                     <source
-                      srcset="./img/img5-dt-1x.jpg 1x, ./img/img5-dt-2x.jpg 2x"
-                      media="(min-with: 1200px)"
+                      srcset="./img/img5-mob-1x.jpg 1x, /img/img5-mob-2x.jpg 2x"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/img5.jpg" alt="Проект Boxes" width="370" />
                   </picture>
@@ -297,16 +296,16 @@
                 <div class="over">
                   <picture>
                     <source
+                      srcset="./img/img6-dt-1x.jpg 1x, ./img/img6-dt-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img6-tab-1x.jpg 1x, ./img/img6-tab-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
                       srcset="./img/img6-mob-1x.jpg 1x, ./img/img6-mob-2x.jpg 2x"
-                      media="(max-with: 768px)"
-                    />
-                    <source
-                      srcset="./img/img6-tab-1x.jpg 1x, ./img/img6-tab-1x.jpg 2x"
-                      media="(min-with: 768px)"
-                    />
-                    <source
-                      srcset="./img/img6-dt-1x.jpg 1x, ./img/img6-dt-1x.jpg 2x"
-                      media="(min-with: 1200px)"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/img6.jpg" alt="" width="370" />
                   </picture>
@@ -330,16 +329,16 @@
                 <div class="over">
                   <picture>
                     <source
-                      srcset="./img/img7-mob-1x.jpg 1x, ./img/img7-mob-2x.jpg 2x"
-                      media="(max-with: 768px)"
+                      srcset="./img/img7-dt-1x.jpg 1x, ./img/img7-dt-2x.jpg 2x"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="./img/img7-tab-1x.jpg 1x, ./img/img7-tab-2x.jpg 2x"
-                      media="(min-with: 768px)"
+                      media="(min-width: 768px)"
                     />
                     <source
-                      srcset="./img/img7-dt-1x.jpg 1x, ./img/img7-dt-1x.jpg 2x"
-                      media="(min-with: 1200px)"
+                      srcset="./img/img7-mob-1x.jpg 1x, ./img/img7-mob-2x.jpg 2x"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/img7.jpg" alt="Издание Limited Edition" />
                   </picture>
@@ -363,16 +362,16 @@
                 <div class="over">
                   <picture>
                     <source
+                      srcset="./img/img8-dt-1x.jpg 1x, ./img/img8-dt-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./img/img8-tab-1x.jpg 1x, ./img/img8-tab-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
                       srcset="./img/img8-mob-1x.jpg 1x, ./img/img8-mob-2x.jpg 2x"
-                      media="(max-with: 768px)"
-                    />
-                    <source
-                      srcset="./img/img8-tab-1x.jpg 1x, ./img/img8-tab-1x.jpg 2x"
-                      media="(min-with: 768px)"
-                    />
-                    <source
-                      srcset="./img/img8-dt-1x.jpg 1x, ./img/img8-dt-1x.jpg 2x"
-                      media="(min-with: 1200px)"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/img8.jpg" alt="Проект LAB" />
                   </picture>
@@ -396,16 +395,16 @@
                 <div class="over">
                   <picture>
                     <source
-                      srcset="./img/img9-mob-1x.jpg 1x, ./img/img9-mob-2x.jpg 2x"
-                      media="(max-with: 768px)"
+                      srcset="./img/img9-dt-1x.jpg 1x, ./img/img9-dt-1x.jpg 2x"
+                      media="(min-width: 1200px)"
                     />
                     <source
                       srcset="./img/img9-tab-1x.jpg 1x, ./img/img9-tab-2x.jpg 2x"
-                      media="(min-with: 768px)"
+                      media="(min-width: 768px)"
                     />
                     <source
-                      srcset="./img/img9-dt-1x.jpg 1x, ./img/img9-dt-1x.jpg 2x"
-                      media="(min-with: 1200px)"
+                      srcset="./img/img9-mob-1x.jpg 1x, ./img/img9-mob-2x.jpg 2x"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/img9.jpg" alt="Growing Business" />
                   </picture>
