--- a/index.html
+++ b/index.html
@@ -179,39 +179,33 @@
           <h2 class="wedo-title">Чем мы занимаемся</h2>
           <ul class="wedo-list list">
             <li class="wedo-item">
-              <picture>
-                <source
-                  srcset="./img/wedo1-dt-1x.jpg 1x, ./img/wedo1-dt-1x.jpg 2x"
-                  media="(min-with: 1200px)"
-                />
-                <img src="./img/wedo1.jpg" alt="Строим схемы" />
-              </picture>
+              <img
+                srcset="./img/wedo1-dt-1x.jpg 1x, ./img/wedo1-dt-2x.jpg 2x"
+                src="./img/wedo1.jpg"
+                alt="Строим схемы"
+              />
 
               <div class="over-block">
                 <h3 class="over-block-title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
               </div>
             </li>
             <li class="wedo-item">
-              <picture>
-                <source
-                  srcset="./img/wedo2-dtx2.jpg 1x, ./img/wedo2-dtx2.jpg 2x"
-                  media="(min-with: 1200px)"
-                />
-                <img src="./img/wedo2.jpg" alt="Разрабатываем дизайн" />
-              </picture>
+              <img
+                srcset="./img/wedo2-dt-1x.jpg 1x, ./img/wedo2-dtx2.jpg 2x"
+                src="./img/wedo2.jpg"
+                alt="Разрабатываем дизайн"
+              />
 
               <div class="over-block">
                 <h3 class="over-block-title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
               </div>
             </li>
             <li class="wedo-item">
-              <picture>
-                <source
-                  srcset="./img/wedo3-dt-1x.jpg 1x, ./img/wedo3-dt-2x.jpg 2x"
-                  media="(min-with: 1200px)"
-                />
-                <img src="img/wedo3.jpg" alt="Стилизуем" />
-              </picture>
+              <img
+                srcset="./img/wedo3-dt-1x.jpg 1x, ./img/wedo3-dt-2x.jpg 2x"
+                src="img/wedo3.jpg"
+                alt="Стилизуем"
+              />
 
               <div class="over-block">
                 <h3 class="over-block-title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
@@ -230,17 +224,22 @@
             <li class="team-item team-set__team-item team-set__team-item--color">
               <picture>
                 <source
+                  srcset="./img/team1-dt-1x.jpg 1x, ./img/team1-dt-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="./img/team1-tab-1x.jpg 1x, ./img/team1-tab-2x.jpg 2x"
+                  type="image/jpg"
+                  media="(min-width: 768px)"
+                />
+                <source
                   srcset="./img/team1-mob-1x.jpg 1x, ./img/team1-mob-2x.jpg 2x"
-                  media="(max-with: 768px)"
+                  type="image/jpg"
+                  media="(max-width: 767px)"
                 />
-                <source
-                  srcset="./img/team1-tab-1x.jpg 1x, ./img/team1-tab-1x.jpg 2x"
-                  media="(min-with: 768px)"
-                />
-                <source
-                  srcset="./img/team1-dt-1x.jpg 1x, ./img/team1-dt-1x.jpg 2x"
-                  media="(min-with: 1200px)"
-                />
+
                 <img src="./img/tem1.jpg" class="team-item__image" alt="Игорь Демьяненко" />
               </picture>
 
@@ -280,16 +279,16 @@
             <li class="team-item team-set__team-item team-set__team-item--color">
               <picture>
                 <source
-                  srcset="./img/team2-mob-1x.jpg 1x, ./img/team2-mob-2x.jpg 2x"
-                  media="(max-with: 768px)"
+                  srcset="./img/team2-dt-1x.jpg 1x, ./img/team2-dt-1x.jpg 2x"
+                  media="(min-width: 1200px)"
                 />
                 <source
                   srcset="./img/team2-tab-1x.jpg 1x, ./img/team2-tab-2x.jpg 2x"
-                  media="(min-with: 768px)"
+                  media="(min-width: 768px)"
                 />
                 <source
-                  srcset="./img/team2-dt-1x.jpg 1x, ./img/team2-dt-1x.jpg 2x"
-                  media="(min-with: 1200px)"
+                  srcset="./img/team2-mob-1x.jpg 1x, ./img/team2-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
                 />
                 <img src="./img/tem2.jpg" class="team-item__image" alt="Ольга Репина" />
               </picture>
@@ -330,16 +329,16 @@
             <li class="team-item team-set__team-item team-set__team-item--color">
               <picture>
                 <source
-                  srcset="./img/team3-mob-1x.jpg 1x, ./img/team3-mob-2x.jpg 2x"
-                  media="(max-with: 768px)"
+                  srcset="./img/team3-dt-1x.jpg 1x, ./img/team3-dt-2x.jpg 2x"
+                  media="(min-width: 1200px)"
                 />
                 <source
                   srcset="./img/team3-tab-1x.jpg 1x, ./img/team3-tab-2x.jpg 2x"
-                  media="(min-with: 768px)"
+                  media="(min-width: 768px)"
                 />
                 <source
-                  srcset="./img/team3-dt-1x.jpg 1x, ./img/team3-dt-2x.jpg 2x"
-                  media="(min-with: 1200px)"
+                  srcset="./img/team3-mob-1x.jpg 1x, ./img/team3-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
                 />
                 <img src="./img/tem3.jpg" class="team-item__image" alt="Николай Тарасов" />
               </picture>
@@ -380,16 +379,16 @@
             <li class="team-item team-set__team-item team-set__team-item--color">
               <picture>
                 <source
+                  srcset="./img/team4-dt-1x.jpg 1x, ./img/team4-dt-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./img/team4-tab-1x.jpg 1x, ./img/team4-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
                   srcset="./img/team4-tab-1x.jpg 1x, ./img/team4-mob-2x.jpg 2x"
-                  media="(max-with: 768px)"
-                />
-                <source
-                  srcset="./img/team4-tab-1x.jpg 1x, ./img/team4-tab-1x.jpg 2x"
-                  media="(min-with: 768px)"
-                />
-                <source
-                  srcset="./img/team4-dt-1x.jpg 1x, ./img/team4-dt-1x.jpg 2x"
-                  media="(min-with: 1200px)"
+                  media="(max-width: 767px)"
                 />
                 <img src="./img/tem4.jpg" class="team-item__image" alt="Михаил Ермаков" />
               </picture>
